--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.1.2",
+    "bottleneck": "^2.19.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
