--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -79,7 +79,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build-output
-          path: ./out
+          path: ./.next
 
   # Deployment job
   deploy:
