--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -87,6 +87,7 @@ jobs:
 
   # Deployment job
   deploy:
+    if: github.event_name == 'push'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
